<resources>
    <string name="app_name">Peakaboo</string>
    <string name="action_opendataset">Open Dataset</string>
    <string name="action_acceptfitting">Accept Fit</string>
    <string name="action_rejectfitting">Reject Fit</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="action_savesession">Save Session</string>
    <string name="action_export">Export</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_plugins">Plugins</string>
    <string name="action_logs">Logs</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="toast_newersession">Session is from a newer version of Peakaboo, some settings may not load correctly.</string>
    <string name="action_filters">Data Filters</string>
    <string name="action_fittings">Peak Fittings</string>
    <string name="action_map">Map Fittings</string>
    <string name="action_energy">Energy Calibration</string>
    <string name="close">Close</string>
</resources>
